--- a/examples/stories/example.scss
+++ b/examples/stories/example.scss
@@ -1,3 +1,5 @@
+@import "~or-theme";
+
 .example {
   font-family: Helvetica W01,sans-serif;
 
@@ -18,6 +20,10 @@
   .or-btn {
     margin-top: 20px;
     font-size: 10px;
+
+    &:hover {
+      background-color: $primary-color;
+    }
   }
 }
 
