--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 
 .#{$prefix}-color-selecter-wrapper {
   display: flex;
+  font-family: $font-family;
+
   .#{$prefix}-color-selecter {
     width: 25px;
     height: 25px;
@@ -26,6 +28,7 @@
 
     &.active {
       border-color: $black;
+      transition: all .25s ease-in-out;
     }
 
     .inner-color {
