feat: migration from js to ts

--- a/examples/stories/styles.scss
+++ b/examples/stories/styles.scss
@@ -12,14 +12,14 @@
     color: #6e6e6e;
   }
 
-  .color {
+  .color-text {
     padding-left: 10px;
     color: #000;
   }
 
   .or-btn {
     margin-top: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
     font-size: 10px;
 
     &:hover {
